--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/index.ts",
     "db_generate": "bunx drizzle-kit generate",
-    "db_migrate": "bunx drizzle-kit migrate"
+    "db_migrate": "bunx drizzle-kit migrate",
+    "seed": "bun run src/infrastructure/db/seed/seed.ts",
+    "seed:reset": "bun run src/infrastructure/db/seed/seed.ts --reset"
   },
   "dependencies": {
     "@elysiajs/jwt": "^1.4.0",
