--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,12 @@ on:
       - main
 
 jobs:
-  test:
+  server-test:
     runs-on: ubuntu-latest
+
+    default:
+      run: 
+        working-directory: server
 
     steps:
       - name: Checkout
